Created Part object