@@ -4,17 +4,16 @@ import static java.util.function.Predicate.not;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.HashMap;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.ResourceBundle;
 
 import com.kiwimeaty.apps.meditation.util.JsonUtil;
+import com.kiwimeaty.apps.meditation.util.Part;
 import com.kiwimeaty.apps.meditation.util.Session;
 import com.kiwimeaty.apps.meditation.util.UnlockList;
 import com.kiwimeaty.apps.meditation.util.UnlockList.ElementState;
@@ -22,7 +21,6 @@ import com.kiwimeaty.apps.meditation.util.UnlockList.ElementState;
 import javafx.beans.binding.Bindings;
 import javafx.beans.property.ObjectProperty;
 import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.geometry.Insets;
@@ -38,13 +36,12 @@ import javafx.scene.control.TabPane;
 import javafx.scene.control.TitledPane;
 import javafx.scene.layout.GridPane;
 import javafx.scene.layout.HBox;
-import javafx.scene.media.Media;
 
 public final class MainController implements Initializable {
     @FXML
     private TabPane tabs;
 
-    private Map<String, UnlockList<Session>> sessionsByPart = new HashMap<>();
+    private final List<Part> parts = new ArrayList<>();
 
     // TODO from test-tracks to real tracks
     private final Path tracksPath = Path.of("src", "main", "resources", "com", "kiwimeaty",
@@ -65,22 +62,21 @@ public final class MainController implements Initializable {
 
     private void createAndFillTitledPanes(final Path pathToSeries) throws IOException {
 
-        final List<Path> parts;
+        final List<Path> parts1;
 
         try (var partsStrm = Files.walk(pathToSeries).filter(Files::isDirectory).filter(not(pathToSeries::equals))) {
-            parts = partsStrm.toList();
+            parts1 = partsStrm.toList();
         }
 
         final var accordion = new Accordion();
-        for (final Path part : parts) {
-            final var partName = part.getFileName().toString();
-            final var listView = createListView(part, partName, pathToSeries);
+        for (final Path partPath : parts1) {
+            final var part = new Part(partPath);
+            this.parts.add(part);
 
-            // this.sessionsByPart are available here, not before createListView()!
-            final var sessions = this.sessionsByPart.get(partName);
+            final var listView = createListView(part);
 
-            final var nextSessionButton = createNextSessionButton(sessions);
-            final var resetButton = createResetSessionButton(sessions);
+            final var nextSessionButton = createNextSessionButton(part.sessions());
+            final var resetButton = createResetPartButton(part);
 
             // build titledPane
             final var grid = new GridPane();
@@ -92,7 +88,7 @@ public final class MainController implements Initializable {
             grid.add(nextSessionButton, 1, 0);
             grid.add(resetButton, 1, 1);
 
-            accordion.getPanes().add(new TitledPane(partName, grid));
+            accordion.getPanes().add(new TitledPane(part.name(), grid));
         }
         this.tabs.getTabs().add(new Tab(pathToSeries.getFileName().toString(), accordion));
     }
@@ -105,19 +101,19 @@ public final class MainController implements Initializable {
         });
 
         // bind button
-        final var buttonDisabledBinding = Bindings.createBooleanBinding(() -> {
-            return sessions.getStates().stream().allMatch(state -> state.get() == ElementState.UNLOCKED);
-        }, sessions.getStates().toArray(ObjectProperty[]::new)); // ElementStates will be observed
+        final var buttonDisabledBinding = Bindings.createBooleanBinding(
+                () -> sessions.getStates().stream().allMatch(state -> state.get() == ElementState.UNLOCKED),
+                sessions.getStates().toArray(ObjectProperty[]::new)); // ElementStates will be observed
         nextSessionButton.disableProperty().bind(buttonDisabledBinding);
         return nextSessionButton;
     }
 
-    private Button createResetSessionButton(final UnlockList<Session> sessions) {
+    private Button createResetPartButton(final Part part) {
         final var resetButton = new Button("Reset");
-        resetButton.setOnAction(event -> showResetConfirmation(sessions));
+        resetButton.setOnAction(event -> showResetConfirmation(part));
 
         // bind button
-        final var firstSessionState = sessions.getStates().get(0);
+        final var firstSessionState = part.sessions().get(0).getState();
         final var buttonDisabledBinding = Bindings.createBooleanBinding(() -> {
             return firstSessionState.get() == ElementState.LATEST_UNLOCKED;
         }, firstSessionState); // ElementState of first session will be observed
@@ -125,45 +121,30 @@ public final class MainController implements Initializable {
         return resetButton;
     }
 
-    private void showResetConfirmation(final UnlockList<Session> sessions) throws IllegalArgumentException {
+    private void showResetConfirmation(final Part part) throws IllegalArgumentException {
         final var alert = new Alert(AlertType.CONFIRMATION);
-        alert.setTitle("Reset Part");
+        alert.setTitle("Reset Part " + part.name());
         alert.setHeaderText("Are you sure you want to reset this part?");
         alert.setContentText("You'll have to redo each session to unlock them again.");
 
         final Optional<ButtonType> result = alert.showAndWait();
         if (result.get() == ButtonType.OK) {
-            sessions.resetList();
+            part.sessions().resetList(); // TODO store reset
             // storeProgressIntoFile(sessions.getLatestUnlockedElement().part(),
             // sessions.getIndexOfLatestUnlockedElement());
         }
         alert.close();
     }
 
-    private ListView<Session> createListView(final Path part, final String partName, final Path pathToSeries)
+    private ListView<Session> createListView(final Part part)
             throws IOException {
-        final var sessions = createSessions(part, partName);
-        this.sessionsByPart.put(partName, new UnlockList<>(sessions));
         final var listView = new ListView<Session>();
         listView.setCellFactory(listView1 -> new SessionListItem());
 
-        listView.setItems(sessions);
-        // eg: [Basics:Take10]
-        listView.setId(String.format("[%s:%s]", pathToSeries.getFileName(), partName));
+        listView.setItems(FXCollections.observableArrayList(part.sessions()));
+        // eg: .... [Basics:Take10]
+        listView.setId("[%s:%s]".formatted(part.seriesName(), part.name()));
         return listView;
-    }
-
-    private static ObservableList<Session> createSessions(final Path tracksPath, final String partName)
-            throws IOException {
-        try (var files = Files.walk(tracksPath).filter(Files::isRegularFile)) {
-            final ObservableList<Media> tracks = FXCollections.observableArrayList();
-            files.map(Path::toUri).map(URI::toString).map(Media::new).forEach(tracks::add);
-
-            final ObservableList<Session> sessions = FXCollections.observableArrayList();
-            for (var i = 0; i < tracks.size(); i++)
-                sessions.add(new Session(partName, i + 1, tracks.get(i)));
-            return FXCollections.unmodifiableObservableList(sessions);
-        }
     }
 
     private final class SessionListItem extends ListCell<Session> {
@@ -189,8 +170,7 @@ public final class MainController implements Initializable {
                 setGraphic(null);
             } else {
                 this.session = session1;
-                final var sessions = MainController.this.sessionsByPart.get(this.session.part());
-                final var sessionState = sessions.getState(this.session);
+                final var sessionState = this.session.getState();
 
                 this.trackBtn.setText(String.format("%02d", Integer.valueOf(this.session.day())));
                 // bind button
@@ -210,11 +190,11 @@ public final class MainController implements Initializable {
     }
 
     private void playSession(final Session session) {
-        final var sessions = this.sessionsByPart.get(session.part());
-        final var player = new PlayerController(session, sessions.getState(session));
+        final var player = new PlayerController(session, session.getState());
         player.showStage();
         // unlock next session
         player.getStage().setOnCloseRequest(event -> {
+            final var sessions = session.part().sessions();
             final var hasUnlockedNextSession = sessions.unlockNextElement(session);
             if (hasUnlockedNextSession)
                 try {
